--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
             <section class="hero">
                 <picture class="section_img--hero_mobile_tablet">
                     <source srcset="assets/tablet/hero.jpg" media="(min-width: 23.5rem)">
-                    <img src="assets/mobile/hero.jpg" alt="chat group image">
+                    <img src="assets/mobile/hero.jpg" alt="chat group image (mobile v.)">
                 </picture>
                 <picture class="section_img--hero_l_desktop">
                     <source srcset="assets/desktop/hero_left.jpg" media="(min-width: 90rem)">
-                    <img src="assets/tablet/hero.jpg" alt="chat group image">
+                    <img src="assets/tablet/hero.jpg" alt="chat group image (tablet v.)">
                 </picture>
                 <div class="container--hero">
                     <div class="hero__text">
@@ -43,36 +43,36 @@
                 </div>
                 <picture class="section_img--hero_r_desktop">
                     <source srcset="assets/desktop/hero_right.jpg" media="(min-width: 90rem)">
-                    <img src="assets/tablet/hero.jpg" alt="chat group image">
+                    <img src="assets/tablet/hero.jpg" alt="chat group image (tablet v.)">
                 </picture>
             </section>
             <section class="showcase">
                 <div class="container--section">
                     <div class="section_img section_img--large_bottom">
-                        <img src="assets/number_1.svg" alt="number image">
+                        <img src="assets/number_1.svg" alt="number 1 image">
                     </div>
                     <div class="grid">
                         <picture class="grid__item">
                             <source class="grid__img" srcset="assets/desktop/woman_in_videocall.jpg"
                                 media="(min-width: 48rem)">
                             <img class="grid__img" src="assets/mobile/woman_in_videocall.jpg"
-                                alt="woman in videocall image">
+                                alt="woman in videocall image (mobile v.)">
                         </picture>
                         <picture class="grid__item">
                             <source class="grid__img" srcset="assets/desktop/women_videochatting.jpg"
                                 media="(min-width: 48rem)">
                             <img class="grid__img" src="assets/mobile/women_videochatting.jpg"
-                                alt="women videochatting image">
+                                alt="women videochatting image (mobile v.)">
                         </picture>
                         <picture class="grid__item">
                             <source class="grid__img" srcset="assets/desktop/men_in_meeting.jpg"
                                 media="(min-width: 48rem)">
-                            <img class="grid__img" src="assets/mobile/men_in_meeting.jpg" alt="men in meeting image">
+                            <img class="grid__img" src="assets/mobile/men_in_meeting.jpg" alt="men in meeting image (mobile v.)">
                         </picture>
                         <picture class="grid__item">
                             <source class="grid__img" srcset="assets/desktop/man_texting.jpg"
                                 media="(min-width: 48rem)">
-                            <img class="grid__img" src="assets/mobile/man_texting.jpg" alt="man texting image">
+                            <img class="grid__img" src="assets/mobile/man_texting.jpg" alt="man texting image (mobile v.)">
                         </picture>
                     </div>
                     <div class="container--text">
@@ -88,7 +88,7 @@
         </main>
         <footer class="footer">
             <div class="section_img section_img--neg_bottom">
-                <img src="assets/number_2.svg" alt="number image">
+                <img src="assets/number_2.svg" alt="number 2 image">
             </div>
             <div class="footer__bg">
                 <div class="container--text_2">
