Remove duplicate HTML structure
Removed duplicate HTML structure and fixed formatting issues.

--- a/index.html
+++ b/index.html
@@ -7,18 +7,18 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="/css/reset_min.css">
-        <link rel="stylesheet" href="/css/main_min.css">
+        <link rel="stylesheet" href="css/reset_min.css">
+        <link rel="stylesheet" href="css/main_min.css">
         <script src="main.js"></script>
         <title>Article preview component</title>
         <link rel="shortcut icon" href="images/favicon_sdm.ico" />
-        <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon-32x32.png">
     </head>
 
     <body>
         <main class="page_wrapper">
             <article class="card">
-                <img class="card__img" src="/assets/drawers.jpg" alt="drawer image">
+                <img class="card__img" src="assets/drawers.jpg" alt="drawer image">
                 <div class="card__text">
                     <div class="container">
                         <div class="card__main">
@@ -36,7 +36,7 @@
                         <div class="profile" id="profile">
                             <div class="profile__personal_detail" id="personal_detail">
                                 <div class="profile__avatar_img">
-                                    <img src="/assets/avatar_michelle.jpg" alt="avatar image">
+                                    <img src="assets/avatar_michelle.jpg" alt="avatar image">
                                 </div>
                                 <div class="profile__name_and_date">
                                     <span class="profile__name text_preset_2--bold">Michelle Appleton</span>
@@ -77,5 +77,6 @@
             </article>
         </main>
     </body>
+
 
 </html>
