--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                                 <span class="error is_hidden text_preset_3" id="error" aria-live="polite">Valid email required</span>
                             </div>
                             <input class="form__email text_preset_2" type="email" id="email" name="mail"
-                                placeholder="email@company.com" required aria-describedby="error" aria-invalid="true">
+                                placeholder="email@company.com" required aria-describedby="" aria-invalid="false">
                             <button class="button--submit text_preset_2--bold" type="submit" id="submit">Subscribe to monthly
                                 newsletter</button>
                         </form>
